--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtrar Pacientes:</label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 				<table>
 					<thead>
 						<tr>
@@ -74,7 +76,7 @@
 			</section>
 			<section class="container">
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
-				<ul id="mensagem-erro"></ul>
+				<ul id="mensagens-erro"></ul>
 				<form id="form-adiciona">
 					<div class="grupo">
 						<label for="nome">Nome:</label>
@@ -100,5 +102,7 @@
 
 		<script src="js/calcula-imc.js"></script>
 		<script src="js/form.js"></script>
+		<script src="js/remover-paciente.js"></script>
+		<script src="js/filtro.js"></script>
 	</body>
 </html>
