--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<button id="buscar-paciente" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 			<section class="container">
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
@@ -98,11 +98,39 @@
 					<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 				</form>
 			</section>
+			<!-- The Modal -->
+			<div class="modal" id="myModal">
+				<div class="modal-dialog">
+					<div class="modal-content">
+	
+						<!-- Modal Header -->
+						<div class="modal-header">
+							<h4 class="modal-title">Modal Heading</h4>
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+						</div>
+	
+						<!-- Modal body -->
+						<div class="modal-body">
+							<label> </label>
+						</div>
+	
+						<!-- Modal footer -->
+						<div class="modal-footer">=
+							<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+						</div>
+	
+					</div>
+				</div>
+			</div>
+	
+		</div>
 		</main>
 
 		<script src="js/calcula-imc.js"></script>
 		<script src="js/form.js"></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/filtro.js"></script>
+		<script src="js/buscar-paciente.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 	</body>
 </html>
